--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,8 @@ dependencies {
     implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
     //Thư viện của hibernate
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.3.Final'
+    //Thư viên mysql
+    implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
 }
 
 test {
