thêm cấu hình jpa

--- a/build.gradle
+++ b/build.gradle
@@ -24,8 +24,13 @@ dependencies {
     implementation group: 'commons-fileupload', name: 'commons-fileupload', version: '1.4'
     //Thư viện của hibernate
     implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.4.3.Final'
+    implementation group: 'org.hibernate', name: 'hibernate-entitymanager', version: '5.3.0.Final'
     //Thư viên mysql
     implementation group: 'mysql', name: 'mysql-connector-java', version: '8.0.22'
+    //Thư viện của ORM
+    implementation group: 'org.springframework', name: 'spring-orm', version: '5.3.2'
+    //Thư viện của spring data jpa
+    implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.4.2'
 }
 
 test {
