--- a/build.gradle
+++ b/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-orm', version: '5.3.2'
     //Thư viện của spring data jpa
     implementation group: 'org.springframework.data', name: 'spring-data-jpa', version: '2.4.2'
+    //Thư viên validate
+    implementation group: 'javax.validation', name: 'validation-api', version: '2.0.1.Final'
+    implementation group: 'org.hibernate', name: 'hibernate-validator', version: '6.0.10.Final'
 }
 
 test {
